--- a/src/main/resources/templates/fragment/home/welcome-area.html
+++ b/src/main/resources/templates/fragment/home/welcome-area.html
@@ -27,7 +27,7 @@
                     <!-- Welcome Text -->
                     <div class="col-12 col-lg-8 col-xl-12">
                         <div class="welcome-text">
-                            <h2 data-animation="bounceInUp" data-delay="100ms">Hello <br>I'm Yeonghak,Seo</h2>
+                            <h2 data-animation="bounceInUp" data-delay="100ms">Hello <br>I'm JungHyun, Moon</h2>
                             <p data-animation="bounceInUp" data-delay="500ms">I am programmer.</p>
                             <div class="hero-btn-group" data-animation="bounceInUp" data-delay="900ms">
                                 <a href="#" class="btn alime-btn mb-3 mb-sm-0 mr-4">Get a Quote</a>
